# pokereval

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: holdem_spots.jsonl
docs/: demo-before-after.md  leak-attribution.md  metric-divergence.md  phase1-findings.md  phase2-findings.md  phase3-selfplay-offline.md  solver-cfr-plus.md  solver-validation.md
docs/assets/: list_games_AI_vs_human.avif
docs/plans/: 2026-06-23-selfplay.md
docs/specs/: 2026-06-23-selfplay-design.md
docs/superpowers/plans/: 2026-06-20-phase1-environment-eval-suite.md
docs/superpowers/specs/: 2026-06-20-poker-llm-research-eng-design.md
results/: README.md  leduc-gemini.md  leduc-opus.md  rl-leduc-kl-lr1e4.json  rl-leduc-real-kl.json  rl-leduc-real.json
scripts/: demo.py  diag_format.py  diag_reward.py  live_probe.py
src/pokereval/: __init__.py  cli.py
src/pokereval/demo/: analysis_leduc.json  artifact.py  data.py  policies.py  server.py
src/pokereval/demo/static/: index.html
src/pokereval/engine/: kuhn_leduc.py
src/pokereval/eval/: leaderboard.py  leak_attribution.py  metric_divergence.py  runner.py  spots.py
src/pokereval/graders/: judge.py  verifiable.py
src/pokereval/interface/: prompts.py  types.py
src/pokereval/models/: client.py
src/pokereval/rl/: advantage.py  backend.py  config.py  dataset.py  datum.py  evaluate.py  reward.py  sampler.py  train.py  vf_env.py
src/pokereval/rl/selfplay/: game.py  rollout.py  tabular.py  train.py
src/pokereval/solver/: kuhn_equilibrium.py  nash.py
src/pokereval/synth/: generator.py  labeling.py  types.py
tests/: test_smoke.py
tests/demo/: test_artifact.py  test_data.py  test_policies.py  test_server.py
tests/engine/: test_kuhn_leduc.py
tests/eval/: test_cli.py  test_leaderboard.py  test_leak_attribution.py  test_metric_divergence.py  test_runner.py  test_spots.py
tests/graders/: test_judge.py  test_verifiable.py
tests/interface/: test_prompts.py  test_types.py
tests/models/: test_client.py  test_gemini.py
tests/rl/: test_advantage.py  test_backend.py  test_cli_rl.py  test_config.py  test_dataset.py  test_datum.py  test_evaluate.py  test_live_tinker.py  test_reward.py  test_sampler.py  test_selfplay_backend.py  test_selfplay_cli.py  test_selfplay_config.py  test_selfplay_engine.py  test_selfplay_game.py  test_selfplay_rollout.py  test_selfplay_tabular.py  test_selfplay_train.py  test_train.py  test_vf_env.py
tests/solver/: test_cfr_plus.py  test_kuhn_equilibrium.py  test_nash.py
tests/synth/: test_generator.py  test_labeling.py
