[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pokereval"
version = "0.1.0"
description = "A poker testbed for frontier-model research engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6"]

[project.optional-dependencies]
openspiel = ["open_spiel"]
llm = ["anthropic", "openai"]
holdem = ["pokerkit"]
dev = ["pytest>=8.0"]

[project.scripts]
pokereval = "pokereval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pokereval"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["openspiel: requires the open_spiel package"]
