[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pokereval"
version = "0.1.0"
description = "A poker testbed for frontier-model research engineering"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6"]

[project.optional-dependencies]
openspiel = ["open_spiel"]
llm = ["anthropic", "openai"]
holdem = ["pokerkit"]
dev = ["pytest>=8.0", "fastapi", "httpx"]
# numpy backs the importance-sampling Datum (rl/datum.py); it ships with the
# RL stack rather than the base install so the credential-free eval path stays
# dependency-light. verifiers/wandb are needed only for the *live* training run
# (gated behind --live / --wandb) — see the `all` extra note below.
rl = ["tinker>=0.22", "numpy", "verifiers>=0.1", "wandb"]
demo = ["fastapi", "uvicorn"]
# Everything needed to run the full offline test suite (`make test`) and the
# self-play / RLVR smoke loops with NO API keys or Tinker account. Used by
# `make install` so a fresh clone is reproducible in one command. It pulls the
# offline RL deps (tinker SDK + numpy) directly rather than the whole `rl`
# extra, deliberately omitting verifiers/wandb: those are only exercised by the
# gated live path, their tests are importorskip-skipped offline, and verifiers
# transitively requires `wget` (an sdist that fails to build on modern Python),
# which would break `make install`. Install the full live stack with `.[rl]`.
all = ["pokereval[openspiel,llm,holdem,dev,demo]", "tinker>=0.22", "numpy"]

[tool.hatch.build.targets.wheel]
packages = ["src/pokereval"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "openspiel: requires the open_spiel package",
    "tinker: requires a live Tinker account",
    "demo: requires the demo extras (fastapi, httpx)",
]
